# carma

./: .bzrignore  .gitignore  CMakeLists.txt  Cargo.toml  README.md  TODO  animated_parameter.h  blocks.h  dat.c  dump.cpp  glook.cpp  io.cpp  loader.cpp  loader.h  mesh.cpp  model.cpp  pixdec.cpp  pixelmap.cpp  raiifile.h  texturizer.cpp  texturizer.h  viewport.cpp  viewport.h  wscript
.cargo/: config.toml
.github/workflows/: check.yml  codecov.yml
DecodedData/: ABUSE.TXT  KEYS.TXT
DecodedData/DATA/: ACCESSRY.TXT  DKEYMAP0.TXT  DKEYMAP1.TXT  DPOWERUP.TXT  KEYMAP_0.TXT  KEYMAP_3.TXT  NETDEFLT.TXT  OPPONENT.TXT  PARTSHOP.TXT  PATHS.TXT  PEDPATHS.TXT  PEDSUBS.TXT  POWERUP.TXT  RACES0.TXT  TEXT.TXT
DecodedData/DATA/64X48X8/CARS/: BLKEAGLE.ENC  DUMP.ENC  IVAN.ENC  OTIS.ENC  PITBULL.ENC  SCREWIE.ENC
DecodedData/DATA/64X48X8/FONTS/: NEWBLUE.ENC  NEWHITE.ENC  ORANGHED.ENC  TYPEABLE.ENC
DecodedData/DATA/64X48X8/PIXELMAP/: C5VOUCH.PIX  CAMERA.PIX  CCFREZE.PIX  CINVUN.PIX  CIRCLES.PIX  CKPIT80L.PIX  CKPIT80R.PIX  CKPT80F.PIX  CKPT80L.PIX  CKPT81F.PIX  CKPT81L.PIX  CKPT81R.PIX  CKPT82F.PIX  CKPT82R.PIX  CKPT83L.PIX  CKPT83R.PIX  CKPT85L.PIX  CKPT86F.PIX  CKPT87F.PIX  CKPT88F.PIX  CKPT88L.PIX  CKPT88R.PIX  CKPT89F.PIX  CKPT89L.PIX  CKPT89R.PIX  CKPT8AL.PIX  CKPT8AR.PIX  CMTURBO.PIX  COFREZE.PIX  CPFREZE.PIX  CREPAIR.PIX  CTIMER.PIX  CTURBO.PIX  CWATER.PIX  DGREASE.PIX  DGRIP.PIX  DIAMONDS.PIX  DTURBCOP.PIX  DTURBOPP.PIX  EXTDAM0.PIX  (+92 more)
DecodedData/DATA/ACTORS/: &%STOP.ACT  &01PEDX.ACT  &02BAR.ACT  &03TRAFF.ACT  &05LITE.ACT  &06FONE.ACT  &07SIGN.ACT  &34FTREE.ACT  &38WREK.ACT  &41BENCH.ACT  &42PALM1.ACT  &43PALM2.ACT  &46MCART.ACT  &51ICE.ACT  &53STREE.ACT  &CHEVRON.ACT  &CRANE.ACT  &CRN.ACT  &SKYPARK.ACT  &YACHT4.ACT  &YACHT5.ACT  &YACHT6.ACT  &YACHT7.ACT  &YACHT9.ACT  AGENTO.ACT  AGENTOX.ACT  ANNBLAKX.ACT  ANNBLUHX.ACT  ANNIECAR.ACT  ANNIEX.ACT  ANNREDH.ACT  ANNREDHX.ACT  ANNWHIH.ACT  BBOARD3.ACT  BBOARD5.ACT  BGBLUCON.ACT  BIGAPC.ACT  BIGAPCX.ACT  BLABONE.ACT  BLABONH.ACT  (+148 more)
DecodedData/DATA/CARS/: AGENTO.ENC  ANNBLAK.ENC  ANNBLUE.ENC  ANNGREE.ENC  ANNIECAR.ENC  ANNRED.ENC  ANNWHT.ENC  APC.ENC  BIGAPC.ENC  BLKEAGLE.ENC  BRATT.ENC  BUSTER.ENC  DUMP.ENC  EAGBLAK.ENC  EAGBLUE.ENC  EAGGREE.ENC  EAGWHIE.ENC  EAGYELE.ENC  EATER.ENC  ED.ENC  FAUST.ENC  FIRE.ENC  GRIMM.ENC  HAMMER.ENC  HARRY.ENC  IVAN.ENC  KUTTER.ENC  MERC.ENC  OK.ENC  OTIS.ENC  PITBULL.ENC  RAZOR.ENC  SCREWIE.ENC  SHIRLEY.ENC  STELLA.ENC  STIG.ENC  TARTLET.ENC  TASSLE.ENC  VALHELLA.ENC  VLAD.ENC  (+1 more)
DecodedData/DATA/MATERIAL/: 2WPOST.MAT  ACIDSCRN.MAT  AGENTO.MAT  ANNBLAL8.MAT  ANNBLUH.MAT  ANNBLUL8.MAT  ANNCARL8.MAT  ANNGREH.MAT  ANNIECAR.MAT  ANNREDH.MAT  APC.MAT  APC8.MAT  ASTRO.MAT  BIGAPC8.MAT  BLABONE.MAT  BLABONH.MAT  BLUBONH.MAT  BLULIT.MAT  BRP3.MAT  BUSBON.MAT  C1SKY3.MAT  C3SKY1.MAT  CITYA8.MAT  CITYB1.MAT  CITYC.MAT  COA8TA1.MAT  COA8TA2.MAT  COA8TB3.MAT  COAST.MAT  COASTA.MAT  COASTA3.MAT  COASTB1.MAT  COASTB90.MAT  COASTC1.MAT  COASTC2.MAT  COASTC3.MAT  COLICIUM.MAT  COSTB.MAT  CSTB2.MAT  CSTB3.MAT  (+107 more)
DecodedData/DATA/NONCARS/: BARRIER.ENC  BENCH.ENC  FTREE.ENC  ICART.ENC  LITE.ENC  STREE2.ENC  TRAFF.ENC  WTOWER.ENC
DecodedData/DATA/PIXELMAP/: AGENTO.PIX  AGENTO8.PIX  ANN.PIX  ANNBLAH8.PIX  ANNBLAK.PIX  ANNBLAK8.PIX  ANNBLAKH.PIX  ANNBLAKL.PIX  ANNBLUH8.PIX  ANNBLUL.PIX  ANNBLUL8.PIX  ANNBON8.PIX  ANNGREH8.PIX  ANNREDH8.PIX  ANNREDL.PIX  ANNREDL8.PIX  ANNWHIH.PIX  ANNWHIH8.PIX  ANNWHIL.PIX  ANNWHIL8.PIX  ANNYELH.PIX  ANNYELL8.PIX  APC.PIX  APC8.PIX  APCBON8.PIX  ARENA.PIX  ARTISTIC.PIX  ASTRO.PIX  BARREL.PIX  BARRY.PIX  BAT.PIX  BHORIZN.PIX  BIGAPC.PIX  BIGFINS.PIX  BIGGIB1.PIX  BIGGIB2.PIX  BIGGIB4.PIX  BIGGIB5.PIX  BIGGIBS.PIX  BIK.PIX  (+277 more)
DecodedData/DATA/RACES/: CITYA3.ENC  CITYB1.ENC  CITYB2.ENC  CITYC3.ENC  COASTA1.ENC  COASTB1.ENC  COASTB2.ENC  COASTC.ENC  COASTC1.ENC  COASTC2.ENC  DEZRACE3.ENC  DEZRACE4.ENC  ICE.ENC  ICE3.ENC  INDUSTA2.ENC  INDUSTB3.ENC  MINESB5.ENC  NETCITYA.ENC  NETCITYB.ENC  NETCITYC.ENC  NETCOSTA.ENC  NETMINES.ENC  ZEBRA.ENC
DecodedData/DATA/REG/MATERIAL/: OILSMEAR.MAT  ROAD1.MAT  SPECVOL.MAT
DecodedData/DATA/REG/PALETTES/: DRRENDER.PAL
DecodedData/DATA/REG/PIXELMAP/: FLM06.PIX  FLM07.PIX  FLM08.PIX  FLM11.PIX  FLM12.PIX  FLM13.PIX  FLM14.PIX  FLM15.PIX  FLM16.PIX  FLM17.PIX  FLM19.PIX  SPECVOL.PIX  SPLASH.PIX  SPLISH.PIX
DecodedData/DATA/REG/SHADETAB/: DRRENDER.TAB  FLC2REND.TAB  IDENTITY.TAB
assets/DecodedData/DATA/: BORING.TXT  DARES.TXT  DEMOFILE.TXT  GENERAL.TXT  KEYMAP.TXT  KEYMAP_2.TXT  KEYNAMES.TXT  NETRACES.TXT  OPTIONS.TXT  PEDESTRN.TXT  PEDRACES.TXT  RACES.TXT  SPECVOL.TXT
assets/DecodedData/DATA/64X48X8/: HEADUP.ENC
assets/DecodedData/DATA/ACTORS/: &%LIT2.ACT  &%TLITE.ACT  &00GAS.ACT  &35TREE.ACT  &37DC2.ACT  &40TOWER.ACT  &44CONE3.ACT  &45ICART.ACT  &50ICE.ACT  &52STREE.ACT  &FONE.ACT  &HWSIGN.ACT  &MON.ACT  &RCN.ACT  &YACHT10.ACT  &YACHT8.ACT  ANNBLAK.ACT  ANNBLUH.ACT  ANNBON.ACT  ANNGREH.ACT  ANNGREHX.ACT  ANNWHIHX.ACT  APC.ACT  APCBON.ACT  APCX.ACT  ARENA.ACT  BBOARD1.ACT  BBOARD2.ACT  BBOARD4.ACT  CAFE.ACT  (+135 more)
bevy-test/: Cargo.toml
bevy-test/src/: main.rs
carma/: Cargo.toml
carma/src/: main.rs
carma_derive/: Cargo.toml
carma_derive/src/: lib.rs
cmake/: FindGLFW.cmake
include/: car.h  raiifile.h  shader.hpp  texturizer.h
include/math/: matrix.h  vector.h
kaitai/: carma.ksy
libcarma/: Cargo.toml
libcarma/src/support/: animated_parameter.rs  camera.rs  logger.rs  mod.rs  render_manager.rs
libcarma/src/support/brender/: actor.rs  model.rs  resource.rs
math/: matrix.h  vector.h
proc-macros/: Cargo.toml
proc-macros/src/: lib.rs
shaders/: first.frag  first.vert
src/: convert_to_png.rs  dump.cpp  glook.cpp  lib.rs  loader.cpp  main.rs  mesh.cpp  model.cpp  ogltest.cpp  pixdec.cpp  pixelmap.cpp  shader.cpp  teapot.rs
src/assets/: asset_io.rs  car_asset.rs  mod.rs
src/support/: actor.rs  camera.rs  car.rs  logger.rs  material.rs  mesh.rs  mod.rs  model.rs  render_manager.rs  resource.rs  texture.rs  visitor.rs
src/support/brender/: README.md  actor.rs  material.rs  mesh.rs  mod.rs  model.rs  pixelmap.rs  resource.rs  texture.rs
(+635 files in other folders)
