[package]
authors = ["Berkus Decker <berkus+cargo@metta.systems>"]
edition = "2021"
name = "carma"
version = "0.0.1"

[dependencies]
derive_builder = "0.13"
glium = "0.32"
image = "0.24"
# then move on to vulkano = "0.19"
byteorder = "1.3"
cgmath = "0.18"
id_tree = "1.7"
num = "0.4"
log = "0.4"
fern = "0.6"
chrono = "0.4"
png = "0.17"
bevy = "0.1"
# todo: use failure
