[package]
authors = ["Berkus Decker <berkus+cargo@metta.systems>"]
edition = "2021"
name = "libcarma"
version = "0.0.3"
publish = false

[features]
default = ["fastdev"]
fastdev = ["bevy/dynamic_linking"]

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
fehler = "1.0"
# Release
bevy = "0.12"
# Debug
# bevy = { version = "0.12", features = ["dynamic_linking"] }
bevy_egui = "0.24"
bevy_asset_loader = "0.19"
smooth-bevy-cameras = "0.10"
byteorder = "1.5"
log = "0.4"
derive_builder = "0.13"
glium = "0.32"
image = "0.24"
# then move on to vulkano = "0.19"
cgmath = "0.18"
id_tree = "1.8"
num = "0.4"
fern = "0.6"
chrono = "0.4"
bevy-inspector-egui = { version = "0.22.1", features = ["highlight_changes"] }
